--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bibek Silwal – Educator & Botany Student</title>
     <style>
+        /* Base Styles */
         body {
-            background: linear-gradient(to right, #ff7e5f, #feb47b); /* Gradient from peach to yellow */
+            background: linear-gradient(to right, #ff7e5f, #feb47b); /* Gradient background */
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 20px;
@@ -18,13 +19,14 @@
 
         .container {
             display: flex;
+            flex-direction: row; /* Side by side on larger screens */
             max-width: 800px;
             width: 100%;
             border: 1px solid #ccc;
             border-radius: 8px;
             padding: 20px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            background: white; /* White background for content */
+            background: white;
         }
 
         .container img {
@@ -50,7 +52,45 @@
         }
 
         .social-media a:hover {
-            color: #0077b5; /* Example hover color */
+            color: #0077b5;
+        }
+
+        footer {
+            margin-top: 20px;
+            text-align: center;
+            font-size: 0.9em;
+            color: #555;
+        }
+
+        footer a {
+            text-decoration: none;
+            color: #0073e6;
+        }
+
+        footer a:hover {
+            text-decoration: underline;
+        }
+
+        /* Media Query for Mobile Devices */
+        @media (max-width: 600px) {
+            .container {
+                flex-direction: column; /* Stacks the image and intro vertically */
+                text-align: center;
+            }
+
+            .container img {
+                max-width: 150px; /* Make the image smaller on mobile */
+                margin: 0 auto 20px auto; /* Center image on mobile */
+            }
+
+            .intro {
+                text-align: center; /* Center text on mobile */
+            }
+
+            .social-media a {
+                display: block; /* Stacks links vertically on mobile */
+                margin: 10px 0;
+            }
         }
     </style>
 </head>
@@ -67,6 +107,10 @@
     <div class="social-media">
         <a href="https://www.facebook.com/bibek.silwal.98" target="_blank">Facebook</a>
     </div>
+
+    <footer>
+        Page Made by <a href="https://github.com/Rubinyes" target="_blank">Rubinyes</a>
+    </footer>
 
 </body>
 </html>
