--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         .container {
             display: flex;
-            flex-direction: row; /* Side by side on larger screens */
+            flex-direction: column; /* Stack image and intro vertically */
             max-width: 800px;
             width: 100%;
             border: 1px solid #ccc;
@@ -27,16 +27,18 @@
             padding: 20px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
             background: white;
+            text-align: center; /* Center all text */
         }
 
         .container img {
             max-width: 200px;
             border-radius: 50%;
-            margin-right: 20px;
+            margin: 0 auto 20px auto; /* Center image and add space below */
         }
 
         .intro {
             flex: 1;
+            text-align: center;
         }
 
         .social-media {
@@ -73,22 +75,12 @@
 
         /* Media Query for Mobile Devices */
         @media (max-width: 600px) {
-            .container {
-                flex-direction: column; /* Stacks the image and intro vertically */
-                text-align: center;
-            }
-
             .container img {
                 max-width: 150px; /* Make the image smaller on mobile */
-                margin: 0 auto 20px auto; /* Center image on mobile */
-            }
-
-            .intro {
-                text-align: center; /* Center text on mobile */
             }
 
             .social-media a {
-                display: block; /* Stacks links vertically on mobile */
+                display: block; /* Stack links vertically on mobile */
                 margin: 10px 0;
             }
         }
